src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
    .bg-grid {
        background-size: 40px 40px;
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.05) 1px, transparent 1px),
            linear-gradient(to bottom, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
    }
}

@layer base {
    html {
        scroll-behavior: smooth;
    }

    body {
        @apply overflow-x-hidden bg-black;
    }

    :root {
        /* Default Theme (Gold) */
        --color-primary: #BF953F;
        --color-primary-hover: #AA771C;
        --color-primary-light: #FCF6BA;
    }

    [data-theme='green'] {
        --color-primary: #88B04B;
        --color-primary-hover: #6A8F3D;
        --color-primary-light: #D0E6A5;
    }

    [data-theme='blue'] {
        --color-primary: #6495ED;
        --color-primary-hover: #4169E1;
        --color-primary-light: #B0C4DE;
    }

    [data-theme='purple'] {
        --color-primary: #9370DB;
        --color-primary-hover: #663399;
        --color-primary-light: #E6E6FA;
    }
}

